--- a/social_blog/templates/main.html
+++ b/social_blog/templates/main.html
@@ -77,6 +77,15 @@
           <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
         </form>
+
+        <ul class="nav navbar-nav navbar-right ml-4 mr-3">
+          {% if current_user.is_authenticated %}
+            <li><a href="{{ url_for('auth.logout') }}">Sign Out</a></li>
+          {% else %}
+            <li><a href="{{ url_for('auth.login') }}">Sign In</a></li>
+          {% endif %}
+        </ul>
+
       </div>
     </nav>
   </header>
