Add user home page.

--- a/social_blog/templates/auth/change_password.html
+++ b/social_blog/templates/auth/change_password.html
@@ -9,5 +9,6 @@
     </div>
     <div class="col-md-4">
         {{ wtf.quick_form(form) }}
+        <a class="btn btn-info" href="{{ url_for('dashboard') }}">Cancel</a>
     </div>
 {% endblock %}
