--- a/social_blog/templates/auth/login.html
+++ b/social_blog/templates/auth/login.html
@@ -17,4 +17,5 @@
             Click here to register
         </a>
     </p>
+        <a href="{{ url_for('auth.reset_password_request') }}">Reset Password</a>
 {% endblock %}
