--- a/social_blog/templates/edit_profile.html
+++ b/social_blog/templates/edit_profile.html
@@ -1,14 +1,16 @@
 {% extends 'main.html' %}
 {% import 'bootstrap/wtf.html' as wtf %}
 
-{% block title %}Flasky - Change an email{% endblock %}
+{% block title %}Flasky - Edit profile{% endblock %}
 
 {% block content %}
     <div class="page-header">
-        <h1>Change an email</h1>
+        <h1>Edit profile</h1>
     </div>
     <div class="col-md-4">
         {{ wtf.quick_form(form) }}
-        <a class="btn btn-info" href="{{ url_for('dashboard') }}">Cancel</a>
+        <a class="btn btn-info" href="{{ url_for('main.user', username=current_user.username) }}">
+            Cancel
+        </a>
     </div>
 {% endblock %}
