--- a/social_blog/templates/main.html
+++ b/social_blog/templates/main.html
@@ -26,12 +26,21 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
+
+          <!--Link to Home page-->
+          {% if current_user.is_authenticated %}
           <li class="nav-item active">
-            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{{ url_for('main.user', username=current_user.username) }}">Home <span class="sr-only">(current)</span></a>
           </li>
+          {% endif %}
+
+          <!--Link to Settings-->
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('dashboard') }}">Dashboard</a>
+            {% if user == current_user %}
+            <a class="nav-link" href="{{ url_for('dashboard') }}">Settings</a>
+            {% endif %}
           </li>
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Dropdown
